--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ dependencies = [
     "rich-click>=1.8.8",
     "requests>=2.31",
     "tqdm>=4.66",
-    "ebook-dictionary-creator @ git+https://github.com/Vuizur/ebook_dictionary_creator",
     "tomli; python_version < '3.11'",
+    "ebook-dictionary-creator",
 ]
 [[project.authors]]
 name = "Andrey Sorokin"
@@ -57,6 +57,9 @@ dev-dependencies = [
     "pytest-cov>=6.1.1",
     "pytest>=8.3.5",
 ]
+
+[tool.uv.sources]
+ebook-dictionary-creator = { git = "https://github.com/Vuizur/ebook_dictionary_creator" }
 
 [project.scripts]
 dictforge = "dictforge.main:cli"
