--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dev-dependencies = [
     "mkdocs-material>=9.6.13",
     "mkdocstrings[python]>=0.29.1",
     "mypy>=1.15.0",
+    "pip>=25.2",
     "pre-commit>=4.2.0",
     "pymdown-extensions>=10.15",
     "pytest-cov>=6.1.1",
